force-app/main/default/objects/NetSuiteCredit_Memos__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <label>Billing Street</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>