force-app/main/default/objects/NetSuiteCredit_Memos__c/fields/NetSuite_Invoices__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoices__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Invoices</label>
    <referenceTo>NetSuiteInvoices__c</referenceTo>
    <relationshipLabel>Credit Memo</relationshipLabel>
    <relationshipName>Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>