force-app/main/default/objects/NetSuiteCredit_Memos__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Credit_Memo_Line_Items__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Credit_Memo_Line_Items__c.NetSuite_Credit_Memo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>